# ChangeLog for sci-misc/boinc
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-misc/boinc/ChangeLog,v 1.43 2008/11/27 19:49:18 scarabeus Exp $

  27 Nov 2008; Tomas Chvatal <scarabeus@gentoo.org> +files/gui_rpc_auth.cfg,
  boinc-6.2.15.ebuild:
  Add gui_rpc_auth.cfg and fix cert issues. Bug #248749

*boinc-6.2.15 (24 Nov 2008)

  24 Nov 2008; Tomas Chvatal <scarabeus@gentoo.org>
  +files/boinc-6.2.15-mute-warnings.patch,
  +files/boinc-6.2.15-project-list-size.patch, +boinc-6.2.15.ebuild:
  Version bump. Mostly rewrite from scratch.

  06 Aug 2008; Ulrich Mueller <ulm@gentoo.org> metadata.xml:
  Add USE flag description to metadata wrt GLEP 56.

  18 Apr 2008; Markus Dittrich <markusle@gentoo.org> boinc-5.10.45.ebuild:
  Fixed compilation problems with USE="-X" (see bug #218168).

  17 Apr 2008; Markus Dittrich <markusle@gentoo.org>
  +files/boinc-5.10.45-gcc4.3.patch, boinc-4.72.20050813-r3.ebuild,
  boinc-5.2.14.ebuild, boinc-5.4.11.ebuild, boinc-5.5.6.ebuild,
  boinc-5.10.28.ebuild, boinc-5.10.45.ebuild:
  Added patch to fix compile problems with gcc-4.3 (see bug #217919).
  Fixed lots of QA issues.

*boinc-5.10.45 (15 Apr 2008)

  15 Apr 2008; Joshua Jackson <tsunam@gentoo.org> +boinc-5.10.45.ebuild:
  adding 5.10.45 to the tree

  05 Feb 2008; Benedikt Böhm <hollow@gentoo.org>
  boinc-4.72.20050813-r3.ebuild, boinc-5.2.14.ebuild, boinc-5.4.11.ebuild,
  boinc-5.5.6.ebuild, boinc-5.8.15.ebuild, boinc-5.10.28.ebuild:
  fix depend.apache usage wrt #208584

  17 Jan 2008; Joshua Jackson <tsunam@gentoo.org>
  +boinc-4.72.20050813-r3.ebuild, +boinc-5.2.14.ebuild,
  +boinc-5.4.11.ebuild, +boinc-5.5.6.ebuild:
  I forgot about setiathome

*boinc-5.10.28 (17 Jan 2008)

  17 Jan 2008; Joshua Jackson <tsunam@gentoo.org>
  -boinc-4.72.20050813-r3.ebuild, -boinc-5.2.14.ebuild,
  -boinc-5.4.11.ebuild, -boinc-5.5.6.ebuild, +boinc-5.10.28.ebuild: