@@ -25,6 +25,6 @@ EBUILD boinc-5.2.14.ebuild 2865 RMD160 5c487bd33698548f7b7bcce640ed6aff19af2d19 
 EBUILD boinc-5.4.11.ebuild 2852 RMD160 352a4461cb1eecab7fd58075487e605bd25e020b SHA1 ce232ac48c604fd2b0507c8f4c3c251b6f540d82 SHA256 40ca209c770d950614226a34041d9fe10d7c5c37f772a51f5012072c013ed281
 EBUILD boinc-5.5.6.ebuild 3084 RMD160 2a012f47be92b9de7504f576d7397cd2c770b66c SHA1 64cbfcf31c3b441c311d31090cc658d35083cad6 SHA256 8971eaf9a31c3265b8c61f49fd42f1fb79130891fd72af19956b60fd6b472643
 EBUILD boinc-5.8.15.ebuild 3260 RMD160 882057492e1ed36a3d89cafd0d1edf45a8efa18e SHA1 c7761c2e45d5ac503033a2b8fa56c9bcdbc8a9df SHA256 1224a7110ccbec86801b69a02d2aeff7655ee4efe3a0d99ab0908c6615524bea
-EBUILD boinc-6.2.15.ebuild 6821 RMD160 d52f914705f458c652120cd65aaabbcf220dd7d4 SHA1 145a52ab88455ac8d1e88fa91fbc565e74c5ace2 SHA256 07017cc6c0a5fbfa6d9f8143587128374dce73bbd6f7080f358405c9a65d5847
-MISC ChangeLog 8691 RMD160 6fb4e7cf860fe2712c376831f21c5969ef9cf19d SHA1 531e0435671fe2fe1bd8e730388f0091cd21dd01 SHA256 3bd7d363de5ba5b6bf28a545515cd43a97d1266581e26c1a9c18fbe76714cff0
+EBUILD boinc-6.2.15.ebuild 6750 RMD160 23f5ccc1a5df9db321ff33c85f83d5601e844dbb SHA1 e78b385d3dba9879a77d737f794e1dd7aaf27258 SHA256 2146dd330f69a9f92dd3ae87dd2a9396c0768ff98e264f1855350791e8411971
+MISC ChangeLog 8833 RMD160 5ff3cfe484ef586db0eb56322833f426cf6d550e SHA1 c331e25ef306d00620f1eedaf322c81f1a482444 SHA256 65fbbe38b99154c4d702cbd9934b1c8ec77a4114ce08f8355870614b7e6def47
 MISC metadata.xml 475 RMD160 2af23090b07df03f6c9606c9abf20f6eaf75c857 SHA1 cc12576d9321ca75174d9d183093c526807e835c SHA256 be29254b1f37bd801bc54757cc3b77af0baad45f349de6bf3e2f03076f7bf494
