@@ -1,6 +1,9 @@
 # ChangeLog for sci-misc/boinc
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-misc/boinc/ChangeLog,v 1.43 2008/11/27 19:49:18 scarabeus Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-misc/boinc/ChangeLog,v 1.44 2008/11/28 00:06:59 scarabeus Exp $
+
+  28 Nov 2008; Tomas Chvatal <scarabeus@gentoo.org> boinc-6.2.15.ebuild:
+  Update confusing information about password for graphical client.
 
   27 Nov 2008; Tomas Chvatal <scarabeus@gentoo.org> +files/gui_rpc_auth.cfg,
   boinc-6.2.15.ebuild:
